Nexus/ingressController/hostnetwork-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: ingress-nginx-host
    app.kubernetes.io/instance: ingress-nginx-host
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller-host
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx-host
      app.kubernetes.io/instance: ingress-nginx-host
      app.kubernetes.io/component: controller
  revisionHistoryLimit: 10
  minReadySeconds: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-nginx-host
        app.kubernetes.io/instance: ingress-nginx-host
        app.kubernetes.io/component: controller
    spec:
      dnsPolicy: ClusterFirst
      # Вешаем поды непосредственно на сетевые интерфейсы node.
      # --->>>> В том числе и на loopback!!!!! <<<< -----
      hostNetwork: true
      nodeSelector:
        ingress-nginx-node: enable
        # nodeSelector:
        # обязательно пометить ноды, на которых может быть
        # установлен контроллер
      # Использование affinity вместо nodeSelector
#      affinity:
#        nodeAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            nodeSelectorTerms:
#              - matchExpressions:
#                  - key: ingress-nginx-node
#                    operator: In
#                    values:
#                      - enable
      containers:
        - name: controller-host
          # image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.33.0
          image: registry.k8s.io/ingress-nginx/controller:v1.5.1@sha256:4ba73c697770664c1e00e9f968de14e08f606ff961c76e5d7033a4a9c593c629
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /wait-shutdown
          args:
            - /nginx-ingress-controller
            - --election-id=ingress-controller-leader
            - --ingress-class=nginx-host
            - --configmap=$(POD_NAMESPACE)/ingress-nginx-controller-host
            - --validating-webhook=:8443
            - --validating-webhook-certificate=/usr/local/certificates/cert
            - --validating-webhook-key=/usr/local/certificates/key
            # Определяет namespace ingress которого будет обслуживать
            # контроллер. Если пустой, то отслеживаются все namespaces
            # - --watch-namespace=my-project-namespace
            - --http-port=80
            - --https-port=443
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
            runAsUser: 101
            allowPrivilegeEscalation: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
            - containerPort: 8443
              name: webhook
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 90Mi
          volumeMounts:
            - mountPath: /usr/local/certificates/
              name: webhook-cert
              readOnly: true
      serviceAccountName: ingress-nginx
      terminationGracePeriodSeconds: 300
      volumes:
        - name: webhook-cert
          secret:
            secretName: ingress-nginx-admission
